deploy/k8s/vkcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relax-hub
  labels:
    app.kubernetes.io/name: relax-hub
    app.kubernetes.io/part-of: relax-hub
